--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mainflux-ui",
-  "version": "0.0.0",
-  "license": "MIT",
+  "version": "0.1.0",
+  "license": "Apache License, version 2.0",
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
@@ -10,17 +10,18 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/material": "^2.0.0-beta.6",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/router": "4.1.3",
     "core-js": "^2.4.1",
     "lodash": "^4.17.2",
     "rxjs": "5.0.0-beta.12",
@@ -28,10 +29,10 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
+    "@angular/cli": "^1.1.0",
+    "@angular/compiler-cli": "4.1.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.21",
     "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -43,7 +44,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
+    "typescript": "~2.3.4",
     "webdriver-manager": "10.2.5"
   }
 }
