--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "4.2.5",
     "@angular/router": "4.2.5",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
