--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.2",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^v5.0.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
