--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^4.2.5",
+    "@angular/animations": "^4.4.3",
     "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "4.2.5",
-    "@angular/compiler": "4.2.5",
-    "@angular/core": "4.2.5",
+    "@angular/common": "4.4.3",
+    "@angular/compiler": "4.4.3",
+    "@angular/core": "4.4.3",
     "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/forms": "4.2.5",
-    "@angular/http": "4.2.5",
-    "@angular/material": "^2.0.0-beta.6",
-    "@angular/platform-browser": "4.2.5",
-    "@angular/platform-browser-dynamic": "4.2.5",
-    "@angular/router": "4.2.5",
+    "@angular/forms": "4.4.3",
+    "@angular/http": "4.4.3",
+    "@angular/material": "^2.0.0-beta.11",
+    "@angular/platform-browser": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.3",
+    "@angular/router": "4.4.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.2",
+    "ngx-auth": "^2.1.0",
     "rxjs": "^v5.0.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.0",
-    "@angular/compiler-cli": "4.2.5",
+    "@angular/compiler-cli": "4.4.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "codelyzer": "~1.0.0-beta.3",
