--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "^4.4.3",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
+    "@angular/animations": "4.4.4",
+    "@angular/cdk": "2.0.0-beta.12",
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.4.4",
     "@angular/core": "4.4.3",
-    "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/material": "^2.0.0-beta.11",
+    "@angular/flex-layout": "2.0.0-rc.1",
+    "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
+    "@angular/material": "2.0.0-beta.12",
     "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.4",
     "@angular/router": "4.4.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -33,8 +33,8 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.0",
-    "@angular/compiler-cli": "4.4.3",
+    "@angular/cli": "^1.4.7",
+    "@angular/compiler-cli": "4.4.4",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "codelyzer": "~1.0.0-beta.3",
