Add boilerplate routing module. Add clients component stub. Add @ngrx/store to dependencies.
    Add CoreStoreModule. Add reducer for clients feature

    Add effects module. Add boilerplate for one effect

    Add angular material

    Add flex-layout

    Add boilerplate channels component. Add router-store functionality (navigation done through the store)

    Add login component

    Add client actions. Additional components related to client adding. Using store for routing

    Added auth and add client functionality

--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,32 @@
 # IDEs and editors
 /.idea
 /.vscode
+/out-tsc
+
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
 .project
 .classpath
 .c9/
 *.launch
 .settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # misc
 /.sass-cache
 /connect.lock
 /coverage/*
+/coverage
 /libpeerconnection.log
 npm-debug.log
 testem.log
@@ -37,3 +53,6 @@ Thumbs.db
 #json-server database
 db.json
 db.*
+# System Files
+.DS_Store
+Thumbs.db
