--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "Apache License, version 2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy-config.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
